[gd_scene load_steps=16 format=3 uid="uid://vfik7u814tyy"]

[ext_resource type="Script" uid="uid://b1ojbn5djvp58" path="res://Scripts/Worlds/blocking_game.gd" id="1_j80lx"]
[ext_resource type="PackedScene" uid="uid://dwswfxflqmmm" path="res://Scenes/Ui/Objective.tscn" id="2_jjkg1"]
[ext_resource type="PackedScene" uid="uid://cbb1q3hwu6r1v" path="res://Scenes/Ui/Timer.tscn" id="3_0nu82"]
[ext_resource type="PackedScene" uid="uid://dla8emsv03dqx" path="res://Scenes/Objects/obj_scroller_spawner.tscn" id="4_cw18w"]
[ext_resource type="PackedScene" uid="uid://c5lfeqwr588eg" path="res://Scenes/Objects/blocks/block2.tscn" id="5_gsvdr"]
[ext_resource type="Texture2D" uid="uid://c7juqp50t8nu5" path="res://Textures/Images/treasure.webp" id="6_gnd8a"]
[ext_resource type="PackedScene" uid="uid://dam2ofof0rwjn" path="res://Scenes/Objects/blocks/block3.tscn" id="6_jjkg1"]
[ext_resource type="Texture2D" uid="uid://qkxxsatnkh4s" path="res://Textures/Images/skull.webp" id="7_bfxks"]
[ext_resource type="Texture2D" uid="uid://d0g0xcxocmwgs" path="res://Textures/Images/Pirate.webp" id="8_18sc1"]
[ext_resource type="FontFile" uid="uid://b5tfkl2gggdsu" path="res://Textures/Fonts/Torment Pulsation.otf" id="9_cmnr5"]
[ext_resource type="AudioStream" uid="uid://c74vb1e86uxyc" path="res://Audio/Music/YoHo.mp3" id="11_0nu82"]
[ext_resource type="AudioStream" uid="uid://byo5xmgvuhgqu" path="res://Audio/AreaYeLookinAtMeTreasure.mp3" id="12_cw18w"]
[ext_resource type="AudioStream" uid="uid://c3bif3lfrocvr" path="res://Audio/ShiverMeTimbers.mp3" id="13_gsvdr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vyhsq"]
size = Vector2(125, 125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kwqoe"]
size = Vector2(64, 190.94006)

[node name="BlockingGame" type="Node2D"]
script = ExtResource("1_j80lx")

[node name="SceneOpener" parent="." instance=ExtResource("2_jjkg1")]
Objective = "Protect yer treasure!"

[node name="Timer" parent="." instance=ExtResource("3_0nu82")]
time = 10
WinOnTimeout = true

[node name="Spawners" type="Node2D" parent="."]

[node name="objScroller_spawner3" parent="Spawners" instance=ExtResource("4_cw18w")]
position = Vector2(1935, 540)
objList = Array[PackedScene]([ExtResource("5_gsvdr")])
scrollSpeed = Vector2(-300, 0)
objFreq = 1000.0

[node name="objScroller_spawner5" parent="Spawners" instance=ExtResource("4_cw18w")]
position = Vector2(973, -28)
objList = Array[PackedScene]([ExtResource("6_jjkg1")])
scrollSpeed = Vector2(0, 300)
objFreq = 1000.0

[node name="objScroller_spawner4" parent="Spawners" instance=ExtResource("4_cw18w")]
position = Vector2(-25, 540)
objList = Array[PackedScene]([ExtResource("5_gsvdr")])
scrollSpeed = Vector2(300, 0)
objFreq = 1000.0

[node name="CharacterBody2D" type="Area2D" parent="."]
position = Vector2(960, 540)
collision_mask = 15

[node name="Treasure" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_gnd8a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_vyhsq")

[node name="Area2DL" type="Area2D" parent="."]
z_index = -1
position = Vector2(815, 540)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DL"]
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_kwqoe")

[node name="Polygon2D" type="Polygon2D" parent="Area2DL"]
modulate = Color(0, 0, 1, 1)
position = Vector2(-2, 0)
polygon = PackedVector2Array(-39, 96, -39, -96, 10, -96, 10, 96)

[node name="Area2DL2" type="Area2D" parent="."]
z_index = -1
position = Vector2(967, 381)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DL2"]
position = Vector2(-16, 0)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_kwqoe")

[node name="Polygon2D" type="Polygon2D" parent="Area2DL2"]
modulate = Color(0, 0, 1, 1)
position = Vector2(-15, 14)
rotation = 1.5707964
polygon = PackedVector2Array(-39, 96, -39, -96, 10, -96, 10, 96)

[node name="Area2DR" type="Area2D" parent="."]
z_index = -1
position = Vector2(1098, 543)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DR"]
shape = SubResource("RectangleShape2D_kwqoe")

[node name="Polygon2D" type="Polygon2D" parent="Area2DR"]
modulate = Color(0, 0, 1, 1)
polygon = PackedVector2Array(-25, 96, -25, -96, 25, -96, 25, 96)

[node name="Skull" type="Sprite2D" parent="."]
z_index = -4
position = Vector2(984.5, 556.75)
scale = Vector2(2.7418919, 2.362069)
texture = ExtResource("7_bfxks")

[node name="Pirate" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(1000.00006, 557)
scale = Vector2(3.2892158, 2.84398)
texture = ExtResource("8_18sc1")

[node name="Label" type="Label" parent="."]
visible = false
z_index = 2
offset_left = 263.0
offset_top = 17.0
offset_right = 2049.0
offset_bottom = 724.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("9_cmnr5")
theme_override_font_sizes/font_size = 400
text = "ARGGHHHHH!!!!!"

[node name="YoHoYoHo!" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_0nu82")
parameters/looping = true

[node name="Treasure" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_cw18w")

[node name="SHiver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_gsvdr")

[connection signal="area_entered" from="CharacterBody2D" to="." method="_on_character_body_2d_area_entered"]
